# agentic-post-studio

./: README.md
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/src/chains/: generate.py  transformer.py
backend/src/config/: model_config.py
backend/src/notebooks/: generation_chain.ipynb
backend/src/routes/: generate_post.py
backend/src/workflows/: graph.py  state.py
backend/src/workflows/nodes/: generate_node.py  transformer_node.py
